fixed margin of articles on mobile yet again

--- a/css/common.css
+++ b/css/common.css
@@ -448,8 +448,8 @@ h3 {
 
 	.media-section p {
 		
-		margin-left: 10px;
-		margin-right: 10px;
+		margin-left: 20px;
+		margin-right: 20px;
 	}
 
 	.nav-top{
